deploy_kubernetes/dev/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: civil-appeal-case-tracker-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: civil-appeal-case-tracker-app
  template:
    metadata:
      labels:
        app: civil-appeal-case-tracker-app
    spec:
      containers:
        - name: civil-appeal-case-tracker-app
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/dts-legacy/civil-appeal-case-tracker-dev:civil-appeal-case-tracker-app-CIRCLE_SHA1
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "2000m"
              memory: "3Gi"
            limits:
              cpu: "3000m"
              memory: "4Gi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
