deploy_kubernetes/dev/monitor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: civil-appeal-case-tracker-monitor-service
  labels:
    app: civil-appeal-case-tracker-monitor-service
spec:
  securityContext:
    runAsNonRoot: true
  ports:
    - port: 80
      name: http
      targetPort: 8080
  selector:
    app: civil-appeal-case-tracker-monitor
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
