deploy_kubernetes/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: civil-appeal-case-tracker
  namespace: civil-appeal-case-tracker-dev
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    external-dns.alpha.kubernetes.io/set-identifier: civil-appeal-case-tracker-civil-appeal-case-tracker-dev-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecDefaultAction "phase:2,pass,log,tag:github_team=dts-legacy"
      SecRule REQUEST_HEADERS:User-Agent "@contains Amazonbot" "phase:request,log,deny,id:1000000"
      SecRule REQUEST_HEADERS:User-Agent "@contains gptbot" "phase:request,log,deny,id:1000001"
      SecRule REQUEST_HEADERS:User-Agent "@contains bot" "phase:request,log,deny,id:1000002"
      SecRule REQUEST_HEADERS:User-Agent "@contains crawler" "phase:request,log,deny,id:1000003"
      SecRule REQUEST_HEADERS:User-Agent "@contains bingbot" "phase:request,log,deny,id:1000004"
    nginx.ingress.kubernetes.io/server-snippet: |
      location @custom_403 {
        return 403 "<h1>There is a problem:</h1><br><h3>Go back to the previous page using the back arrow and enter valid content</h3>";
      }
      error_page 403 @custom_403;
spec:
  ingressClassName: modsec
  tls:
    - hosts:
        - dev.civil-appeal-case-tracker.apps.live.cloud-platform.service.justice.gov.uk
      secretName: civil-appeal-case-tracker-justice-app-secret
  rules:
    - host: dev.civil-appeal-case-tracker.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: civil-appeal-case-tracker-app-service
                port:
                  number: 80
